# flutter_print

./: CHANGELOG.md  README.md  pubspec.yaml
android/: settings.gradle.kts
example/: README.md  pubspec.yaml
example/lib/: main.dart  print_page.dart  widgets.dart
example/linux/: CMakeLists.txt
example/web/: index.html
example/windows/: CMakeLists.txt
flutter_print/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
flutter_print/android/: build.gradle.kts
flutter_print/example/: pubspec.yaml
flutter_print/lib/: flutter_print.dart
flutter_print/linux/: CMakeLists.txt  flutter_print_plugin.cc  flutter_print_plugin_private.h  messages.cc  messages.h
flutter_print_platform_interface/: CHANGELOG.md  README.md  pubspec.yaml
flutter_print_platform_interface/lib/: flutter_print_platform_interface.dart
flutter_print_web/: CHANGELOG.md  README.md  pubspec.yaml
flutter_print_web/example/: README.md
flutter_print_web/lib/: flutter_print_web.dart
flutter_print_windows/: CHANGELOG.md  README.md  pubspec.yaml
flutter_print_windows/lib/: flutter_print_windows.dart
flutter_print_windows/windows/: CMakeLists.txt  document_renderer.cpp  document_renderer.h  flutter_print_plugin.cpp  flutter_print_plugin.h  flutter_print_plugin_c_api.cpp  flutter_print_utils.cpp  flutter_print_utils.h  messages.cpp  messages.h  printer_setup.cpp  printer_setup.h
ios/: flutter_print.podspec
lib/: flutter_print.dart
lib/src/: document_renderer.dart  flutter_print_method_channel.dart  flutter_print_method_channel_stub.dart  flutter_print_platform_interface.dart  (+1 more)
linux/: flutter_print_plugin.cc  messages.cc  messages.h
macos/: flutter_print.podspec
pigeon/: generate.bat  generate.sh  messages.dart
windows/: CMakeLists.txt  flutter_print_plugin.cpp  flutter_print_plugin.h  flutter_print_plugin_c_api.cpp  flutter_print_utils.cpp  flutter_print_utils.h  messages.cpp  messages.h
windows/include/flutter_print/: flutter_print_plugin_c_api.h
(+68 files in other folders)
